--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.13.1",
@@ -18,6 +20,7 @@
     "@heroui/theme": "^2.4.6",
     "framer-motion": "^12.4.4",
     "next": "15.1.7",
+    "next-intl": "^3.26.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
